# cpp-xpx-supercontract-sdk

./: .gitignore  .gitmodules  CMakeGlobalSettings.cmake  CMakeLists.txt  README.md
libs/blockchain/src/: AcceptRequestTag.h  BlockContext.cpp  BlockchainErrorCode.cpp  CMakeLists.txt  CachedBlockchain.cpp  ClientBlockTag.cpp  ClientBlockTag.h  ClientRPCTag.h  FinishRequestTag.h  RPCBlockchainClient.cpp  RPCBlockchainClient.h  RPCBlockchainClientBuilder.cpp  RPCBlockchainServer.cpp  ServerBlockTag.cpp  ServerBlockTag.h  ServerRPCTag.h  TransactionBuilder.cpp
libs/crypto/src/: CMakeLists.txt  CryptoUtils.cpp  CryptoUtils.h  CurvePoint.cpp  Hashes.cpp  KeccakHash.h  KeyUtils.cpp  Scalar.cpp  SecureZero.cpp  SecureZero.h  Signer.cpp
libs/crypto/test/: CMakeLists.txt  testCurvePointScalar.cpp  testExample.cpp
libs/executor/src/: AutomaticExecutionBlockchainQueryHandler.cpp  AutomaticExecutionBlockchainQueryHandler.h  AutorunBlockchainQueryHandler.cpp  AutorunBlockchainQueryHandler.h  BaseContractTask.cpp  BaseContractTask.h  Batch.h  BatchExecutionTask.cpp  BatchExecutionTask.h  BatchesManager.h  CMakeLists.txt  CallExecutionEnvironment.cpp  CallExecutionEnvironment.h  CallExecutionManager.cpp  CallExecutionManager.h  CallRequest.cpp  Contract.h  ContractBlockchainEventHandler.h  ContractConfig.h  ContractEnvironment.h  ContractMessageEventHandler.h  ContractVirtualMachineQueryHandler.h  DefaultBatchesManager.cpp  DefaultBatchesManager.h  DefaultContract.cpp  DefaultContract.h  DefaultExecutor.cpp  DefaultExecutor.h  DefaultExecutorBuilder.cpp  ExecutorEnvironment.h  InitContractTask.cpp  InitContractTask.h  InternetQueryHandler.cpp  InternetQueryHandler.h  ManualCallBlockchainQueryHandler.cpp  ManualCallBlockchainQueryHandler.h  ManualCallRequest.cpp  Messages.h  ProofOfExecution.cpp  ProofOfExecution.h  (+7 more)
libs/executor/test/: BatchesManagerMock.cpp  BatchesManagerMock.h  CMakeLists.txt  ContractEnvironmentMock.cpp  ContractEnvironmentMock.h  ExecutorEnvironmentMock.cpp  ExecutorEnvironmentMock.h  ExecutorEventHandlerMock.cpp  ExecutorEventHandlerMock.h  MessengerMock.cpp  MessengerMock.h  StorageMock.cpp  (+21 more)
src/: CMakeLists.txt  ExecutorClientMessageSender.h  ExecutorService.cpp  FinishRPCTag.cpp  FinishRPCTag.h  RPCExecutorClient.cpp  RPCExecutorClient.h  RPCExecutorClientErrorCode.cpp  RPCExecutorClientErrorCode.h  RPCExecutorClientEventHandler.cpp  RPCExecutorClientEventHandler.h  RPCTag.h  RPCTagListener.h  ReadRPCTag.cpp  ReadRPCTag.h  StartRPCTag.cpp  StartRPCTag.h  WriteRPCTag.cpp  WriteRPCTag.h
src/contract/: BaseContractTask.h  BatchExecutionTask.cpp  BatchesManager.h  CMakeLists.txt  CallExecutionEnvironment.h  CallExecutionManager.cpp  CallExecutionManager.h  Contract.cpp  Contract.h  ContractBlockchainEventHandler.h  ContractConfig.h  ContractEnvironment.h  ContractMessageEventHandler.h  ContractStorageEventHandler.h  ContractVirtualMachineEventHandler.h  ContractVirtualMachineQueryHandler.h  DebugInfo.h  DefaultBatchesManager.cpp  DefaultBatchesManager.h  DefaultExecutor.cpp  ExecutorEnvironment.h  HttpInternetConnection.h  HttpsInternetConnection.h  InitContractTask.cpp  InternetUtils.cpp  Logger.cpp  Logger.h  Messages.h  OCSPHandler.h  OCSPVerifier.h  RPCBlockchainRequests.h  RPCBlockchainService.h  RPCCall.h  RPCInternetRequests.h  RPCInternetService.h  RPCServerService.h  RPCServerServiceManager.h  RPCVirtualMachine.h  RemoveContractTask.cpp  SynchronizationTask.cpp  (+5 more)
src/crypto/: CMakeLists.txt  CryptoUtils.h  KeyGenerator.cpp  PrivateKey.cpp  SecureZero.h  Signer.cpp
src/protos/: CMakeLists.txt  blockchain.proto  internet.proto  supercontract_server.proto
src/rpcExecutorClient/: CMakeLists.txt  ExecutorClientMessageSender.h  ExecutorService.cpp  FinishRPCTag.cpp  FinishRPCTag.h  RPCExecutorClient.cpp  RPCExecutorClient.h  RPCExecutorClientErrorCode.cpp  RPCExecutorClientErrorCode.h  RPCExecutorClientEventHandler.cpp  RPCExecutorClientEventHandler.h  RPCTag.h  RPCTagListener.h  ReadRPCTag.cpp  ReadRPCTag.h  StartRPCTag.cpp  StartRPCTag.h  WriteRPCTag.cpp  WriteRPCTag.h
src/rpcExecutorServer/: CMakeLists.txt  RPCExecutor.cpp  RPCExecutorServerErrorCode.cpp  RPCExecutorServerErrorCode.h  RPCTag.h  ReadRPCTag.cpp  ReadRPCTag.h  StartRPCTag.cpp  StartRPCTag.h  WriteRPCTag.cpp  WriteRPCTag.h
src/supercontract/: BaseContractTask.cpp  BaseContractTask.h  Batch.h  BatchExecutionTask.cpp  BatchExecutionTask.h  BatchesManager.cpp  BatchesManager.h  CMakeLists.txt  CallExecutionEnvironment.cpp  CallExecutionEnvironment.h  CallExecutionManager.cpp  CallExecutionManager.h  CloseContractTask.cpp  Contract.cpp  Contract.h  ContractBlockchainEventHandler.h  ContractConfig.h  ContractContext.h  ContractEnvironment.h  ContractVirtualMachineQueryHandler.h  DefaultBatchesManager.cpp  DefaultBatchesManager.h  DefaultContract.cpp  DefaultContract.h  DefaultExecutor.cpp  DefaultExecutor.h  DefaultExecutorBuilder.cpp  DefaultInternetConnection.h  ExecutorEnvironment.h  HttpInternetConnection.h  HttpsInternetConnection.h  InitContractTask.cpp  InitContractTask.h  InternetConnection.h  InternetRPC.h  Messages.h  OCSPChecker.h  OCSPHandler.h  OCSPVerifier.h  ProofOfExecution.cpp  (+24 more)
src/utils/: Base32.cpp  Base32.h  CMakeLists.txt  ConfigurationValueParsers.h  HexParser.cpp  IntegerMath.cpp  Logging.cpp  MacroBasedEnumIncludes.h  Serializer.cpp  Serializer.h  TimeSpan.cpp
test/: CMakeLists.txt  testExample.cpp  testHttpConnection.cpp  testHttpsConnection.cpp  testLog.cpp
test/supercontract/: CMakeLists.txt  ContractEnvironmentMock.cpp  ContractEnvironmentMock.h  ExecutionEnvironmentMock.cpp  ExecutorEnvironmentMock.cpp  ExecutorEnvironmentMock.h  ExecutorEventHandlerMock.h  StorageMock.cpp  StorageMock.h  TestUtils.cpp  TestUtils.h  VirtualMachineMock.cpp  VirtualMachineMock.h  testBatchExecutionTask.cpp  testDefaultBatchesManager.cpp  testExample.cpp  testProofOfExecution.cpp  testStorage.cpp
test/supercontracts/: empty_params.rs  fund.rs  get_params.rs  internet_read_faulty.rs  loan.rs  lottery.rs  mytest.rs  simple.rs  storage_faulty.rs  storage_iter_serde.rs  voting.rs
(+504 files in other folders)
